--- a/.gitconfig
+++ b/.gitconfig
@@ -2,14 +2,17 @@
 	diff = auto
 	status = auto
 	branch = auto
+	ui = true
 [user]
 	name = CheezeCake
 	email = emmanuel.nicolet@gmail.com
 [alias]
-	br=branch
-	ci=commit
-	co=checkout
-	df=diff
-	st=status
+	br = branch
+	ci = commit
+	co = checkout
+	df = diff
+	st = status
 [push]
 	default = simple
+[core]
+	editor = vim
