--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,41 +1,40 @@
-# $Id: vim-keys.conf,v 1.2 2010-09-18 09:36:15 nicm Exp $
-#
-# vim-keys.conf, v1.2 2010/09/12
-#
-# By Daniel Thau.  Public domain.
-#
-# This configuration file binds many vi- and vim-like bindings to the
-# appropriate tmux key bindings.  Note that for many key bindings there is no
-# tmux analogue.  This is intended for tmux 1.3, which handles pane selection
-# differently from the previous versions
+setw -g automatic-rename
 
 # split windows like vim
-# vim's definition of a horizontal/vertical split is reversed from tmux's
 bind s split-window -v
 bind v split-window -h
 
-# move around panes with hjkl, as one would in vim after pressing ctrl-w
+# move around panes with hjkl
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
-# resize panes like vim
-# feel free to change the "1" to however many lines you want to resize by, only
-# one at a time can be slow
-bind < resize-pane -L 1
-bind > resize-pane -R 1
-bind - resize-pane -D 1
-bind + resize-pane -U 1
-
-# bind : to command-prompt like vim
-# this is the default in tmux already
-bind : command-prompt
+# resize panes
+bind H resize-pane -L 3
+bind L resize-pane -R 3
+bind J resize-pane -D 3
+bind K resize-pane -U 3
 
 # vi-style controls for copy mode
 setw -g mode-keys vi
 
-
-
-#other settings
+#mouse settings
 set -g mode-mouse on
+set -g mouse-select-pane off
+set -g mouse-resize-pane off
+set -g mouse-select-window off
+
+# reload config
+bind r source-file ~/.tmux.conf
+
+# pane borders
+set-option -g pane-border-fg colour235
+set-option -g pane-active-border-fg white
+
+# status bar
+set -g status-bg colour235
+set -g status-fg white
+set-window-option -g window-status-current-bg white
+set-window-option -g window-status-current-fg red
+set-window-option -g window-status-current-attr bright
