--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,6 @@
 setw -g automatic-rename
+set-option -g base-index 1
+setw -g pane-base-index 1
 
 # split windows like vim
 bind s split-window -v
@@ -33,8 +35,8 @@ set-option -g pane-border-fg colour235
 set-option -g pane-active-border-fg white
 
 # status bar
-set -g status-bg colour235
+set -g status-bg colour233
 set -g status-fg white
-set-window-option -g window-status-current-bg white
+set-window-option -g window-status-current-bg colour237
 set-window-option -g window-status-current-fg red
 set-window-option -g window-status-current-attr bright
