update: .tmux.conf

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,7 +1,5 @@
 setw -g automatic-rename on
-setw -g default-shell /bin/zsh
 set-option -g base-index 1
-setw -g pane-base-index 1
 
 # split windows like vim
 bind s split-window -v
@@ -23,10 +21,8 @@ bind K resize-pane -U 3
 setw -g mode-keys vi
 
 #mouse settings
-set -g mode-mouse on
+setw -g mode-mouse on
 set -g mouse-select-pane off
-set -g mouse-resize-pane off
-set -g mouse-select-window off
 
 # reload config
 bind r source-file ~/.tmux.conf
