update: .tmux.conf

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -21,8 +21,8 @@ bind K resize-pane -U 3
 setw -g mode-keys vi
 
 #mouse settings
-setw -g mode-mouse on
-set -g mouse-select-pane off
+setw -g mouse on
+bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'copy-mode -e'"
 
 # reload config
 bind r source-file ~/.tmux.conf
