--- a/.tmux.conf
+++ b/.tmux.conf
@@ -37,3 +37,14 @@ set -g status-fg white
 set-window-option -g window-status-current-bg colour236
 set-window-option -g window-status-current-fg red
 set-window-option -g window-status-current-attr bright
+
+# Use vim keybindings in copy mode
+setw -g mode-keys vi
+
+# Setup 'v' to begin selection as in Vim
+bind-key -t vi-copy v begin-selection
+bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+
+# Update default binding of `Enter` to also use copy-pipe
+unbind -t vi-copy Enter
+bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
