--- a/.i3/config
+++ b/.i3/config
@@ -11,6 +11,11 @@
 
 exec nm-applet
 exec redshift-gtk
+exec volumeicon
+
+bindsym XF86AudioRaiseVolume exec --no-startup-id amixer set Master 5%+
+bindsym XF86AudioLowerVolume exec --no-startup-id amixer set Master 5%-
+bindsym XF86AudioMute exec --no-startup-id amixer set Master toggle
 
 # Winkey: Mod4
 # alt: Mod1
