--- a/.i3/config
+++ b/.i3/config
@@ -107,7 +107,7 @@ bindsym $mod+space focus mode_toggle
 bindsym $mod+q focus parent
 
 # focus the child container
-#bindsym $mod+d focus child
+bindsym $mod+a focus child
 
 # switch to workspace
 bindsym $mod+ampersand workspace 1
