--- a/.i3/config
+++ b/.i3/config
@@ -48,6 +48,7 @@ floating_modifier $mod
 
 # start a terminal
 bindsym $mod+Return exec gnome-terminal
+bindsym $mod+x exec scrot
 
 # kill focused window
 bindsym $mod+Shift+q kill
