--- a/.i3/config
+++ b/.i3/config
@@ -13,6 +13,8 @@ bindsym XF86AudioRaiseVolume exec --no-startup-id amixer set Master 5%+
 bindsym XF86AudioLowerVolume exec --no-startup-id amixer set Master 5%-
 bindsym XF86AudioMute exec --no-startup-id amixer set Master toggle
 
+bindsym Print exec scrot $HOME/`date +%Y-%m-%d_%H:%M:%S`.png
+
 focus_follows_mouse no
 popup_during_fullscreen smart
 # new_window none
