--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,7 @@
+# plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-yank'
+
 setw -g automatic-rename on
 set-option -g base-index 1
 
@@ -20,7 +24,11 @@ bind K resize-pane -U 3
 # vi-style controls for copy mode
 setw -g mode-keys vi
 
-#mouse settings
+# enter copy mode with escape
+bind Escape copy-mode
+bind-key -Tcopy-mode-vi 'v' send -X begin-selection
+
+# mouse settings
 setw -g mouse on
 bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'copy-mode -e'"
 
@@ -38,13 +46,6 @@ set-window-option -g window-status-current-bg colour236
 set-window-option -g window-status-current-fg red
 set-window-option -g window-status-current-attr bright
 
-# Use vim keybindings in copy mode
-setw -g mode-keys vi
 
-# Setup 'v' to begin selection as in Vim
-bind-key -t vi-copy v begin-selection
-bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
-
-# Update default binding of `Enter` to also use copy-pipe
-unbind -t vi-copy Enter
-bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
