update: .tmux.conf

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,11 @@
+# set -g set-titles on
+# #H: hostname, #T: current window title
+# set -g set-titles-string "@#H: #T"
+
 setw -g automatic-rename on
+
 set-option -g base-index 1
+set-option -g renumber-windows on
 
 # split windows like vim
 bind s split-window -v
