--- a/.i3/config
+++ b/.i3/config
@@ -51,7 +51,7 @@ font pango:Source Code Pro 9
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec gnome-terminal
+bindsym $mod+Return exec termite
 
 # kill focused window
 bindsym $mod+Shift+q kill
