--- a/.tmux.conf
+++ b/.tmux.conf
@@ -38,15 +38,13 @@ bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft=
 bind r source-file ~/.tmux.conf
 
 # pane borders
-set-option -g pane-border-fg colour235
-set-option -g pane-active-border-fg white
+set-option -g pane-border-style fg=colour235
+set-option -g pane-active-border-style fg=white
 
 # status bar
 set -g status-bg colour234
 set -g status-fg white
-set-window-option -g window-status-current-bg colour236
-set-window-option -g window-status-current-fg red
-set-window-option -g window-status-current-attr bright
+set-window-option -g window-status-current-style bg=colour236,fg=red,bright
 
 # plugins
 set -g @plugin 'tmux-plugins/tpm'
