--- a/.gitconfig
+++ b/.gitconfig
@@ -4,7 +4,7 @@
 	branch = auto
 	ui = true
 [user]
-	name = CheezeCake
+	name = Emmanuel Nicolet
 	email = emmanuel.nicolet@gmail.com
 [alias]
 	br = branch
