--- a/.i3/config
+++ b/.i3/config
@@ -52,7 +52,7 @@ font pango:Source Code Pro 9
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec alacritty
+bindsym $mod+Return exec kitty
 
 # kill focused window
 bindsym $mod+Shift+q kill
